--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,9 @@ bind a send-prefix
 unbind C-b
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
+set -g set-titles on
+set -g set-titles-string '#T'
+
 # hjkl pane traversal
 bind h select-pane -L
 bind j select-pane -D
@@ -16,6 +19,9 @@ bind C-h select-pane -L
 bind C-j select-pane -D
 bind C-k select-pane -U
 bind C-l select-pane -R
+
+bind c new-window
+bind C-c new-window
 
 #setw -g mode-keys vi
 #set -g default-terminal "screen-256color"
