--- a/files/tidy.conf
+++ b/files/tidy.conf
@@ -1,6 +1,9 @@
-
-break-before-br: no
+alt-text:
+break-before-br: yes
 char-encoding: latin1
+enclose-block-text: yes
+enclose-text: yes
+fix-uri: yes
 force-output: yes
 indent: auto
 indent-spaces: 2
@@ -12,12 +15,15 @@ new-inline-tags: cfif, cfelse, math, mroot,mrow, mi, mn, mo, msqrt, mfrac, msubs
 numeric-entities: yes
 output-xml: no
 quiet: yes
-quote-ampersand: no
 quote-marks: yes
 quote-nbsp: yes
 show-warnings: no
+tab-size: 2
 tidy-mark: no
 uppercase-attributes: no
 uppercase-tags: no
 wrap: 72
+wrap-php: no
+join-classes: yes
+join-styles: yes
 
