--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -84,9 +84,9 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Vi copypaste mode
-#set-window-option -g mode-keys vi
-#bind-key -t vi-copy 'v' begin-selection
-#bind-key -t vi-copy 'y' copy-selection
+set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 
 # set to main-horizontal, 60% height for main pane
 bind m set-window-option main-pane-height 60\; select-layout main-horizontal
