Fixed tmux uft8 issue

--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -45,8 +45,8 @@ set-window-option -g window-status-bg default
 # active window title colors
 set-window-option -g window-status-current-fg colour166 #orange
 set-window-option -g window-status-current-bg default
-#set-option -g pane-border-fg colour235 #base02
-#set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
 set-option -g message-bg colour235 #base02
 set-option -g message-fg colour166 #orange
 set-option -g display-panes-active-colour colour33 #blue
@@ -55,28 +55,19 @@ set-window-option -g clock-mode-colour green #green
 
 
 set -g status-interval 1
-set -g status-justify centre # center align window list
+set -g status-justify centre
 set -g status-left-length 20
 set -g status-right-length 140
-#set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-#set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=cyan]%Y-%m-%d'
 set -g status-left-length 80
+
 set -g status-left '#[fg=green,bright]#{pane_current_path} #[default]'
-#set -g status-right '#[fg=white,bg=default]%l:%M:%S %p#[default] #[fg=red]%A %B %d, %Y'
 set -g status-right '#[fg=red]%A %B %d, %Y #[fg=white,bg=default]%l:%M:%S %p #[default]'
 setw -g window-status-current-format '#[fg=orange][#[fg=default]#I#[fg=default]:#[fg=default]#W#[fg=grey,dim]#F#[fg=orange]]'
 setw -g window-status-format '#[bg=default,fg=default]#I#[bg=default,fg=default]:#[fg=default]#W#[fg=dim]#F'
 
 
-# Start numbering at 1
 set -g base-index 1
-
-# Allows for faster key repetition
 set -s escape-time 0
-
-# Rather than constraining window size to the maximum size of any client
-# connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
 
 # Activity monitoring
@@ -102,6 +93,8 @@ bind C-r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 set -g default-terminal "screen-256color"
 
 # status bar
+set -g utf8
+set-window-option -g utf8 on
 set-option -g status-utf8 on
 
 # https://github.com/edkolev/dots/blob/master/tmux.conf
