--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -1,4 +1,3 @@
-#TODO: fuck orange
 
 # Be screen-like
 set-option -g prefix C-a
@@ -23,10 +22,11 @@ bind C-l select-pane -R
 bind c new-window
 bind C-c new-window
 
-#setw -g mode-keys vi
-#set -g default-terminal "screen-256color"
+# Used to detach a vim pane
+bind s break-pane -dt bottom
+bind C-s break-pane -dt bottom
 
-set-option -g status-position top
+bind Space choose-buffer
 
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
 set-option -g status-bg colour235 #base02
@@ -60,6 +60,7 @@ set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left-length 80
 
+set-option -g status-position top
 set -g status-left '#[fg=green,bright]#{pane_current_path} #[default]'
 set -g status-right '#[fg=red]%A %B %d, %Y #[fg=white,bg=default]%l:%M:%S %p #[default]'
 setw -g window-status-current-format '#[fg=orange][#[fg=default]#I#[fg=default]:#[fg=default]#W#[fg=grey,dim]#F#[fg=orange]]'
@@ -75,9 +76,11 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Vi copypaste mode
+setw -g mode-keys vi
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'V' rectangle-toggle
 
 # set to main-horizontal, 60% height for main pane
 bind m set-window-option main-pane-height 60\; select-layout main-horizontal
