Updated as of 2016-07-30

--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -4,7 +4,7 @@ set-option -g prefix C-a
 bind-key C-a last-window
 bind a send-prefix
 unbind C-b
-bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
+bind-key C command-prompt -p "Name of new window:" "new-window -n '%%'"
 
 set -g set-titles on
 set -g set-titles-string '#T'
@@ -19,8 +19,20 @@ bind C-j select-pane -D
 bind C-k select-pane -U
 bind C-l select-pane -R
 
+# Rename
+bind A command-prompt -p "Rename:" "rename-window %%"
+set-option -g allow-rename off
+
 bind c new-window
 bind C-c new-window
+
+# Window navigation
+bind-key C-n next-window
+bind-key C-p previous-window
+# C-a-n C-a-p
+
+bind-key - swap-window -t -1
+bind-key = swap-window -t +1
 
 # Used to detach a vim pane
 bind s break-pane -dt bottom
@@ -53,7 +65,6 @@ set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
 set-window-option -g clock-mode-colour green #green
 
-
 set -g status-interval 1
 set -g status-justify centre
 set -g status-left-length 20
@@ -65,7 +76,6 @@ set -g status-left '#[fg=green,bright]#{pane_current_path} #[default]'
 set -g status-right '#[fg=red]%A %B %d, %Y #[fg=white,bg=default]%l:%M:%S %p #[default]'
 setw -g window-status-current-format '#[fg=orange][#[fg=default]#I#[fg=default]:#[fg=default]#W#[fg=grey,dim]#F#[fg=orange]]'
 setw -g window-status-format '#[bg=default,fg=default]#I#[bg=default,fg=default]:#[fg=default]#W#[fg=dim]#F'
-
 
 set -g base-index 1
 set -s escape-time 0
