--- a/files/tidy.conf
+++ b/files/tidy.conf
@@ -1,29 +1,39 @@
 alt-text:
 break-before-br: yes
-char-encoding: latin1
+char-encoding: utf8
+clean: yes
+doctype: auto
 enclose-block-text: yes
 enclose-text: yes
 fix-uri: yes
 force-output: yes
-indent: auto
+hide-comments: no
 indent-spaces: 2
+indent: yes
 input-xml: no
+join-classes: yes
+join-styles: yes
 markup: yes
-new-blocklevel-tags: cfoutput, cfquery
-new-empty-tags: cfelse
-new-inline-tags: cfif, cfelse, math, mroot,mrow, mi, mn, mo, msqrt, mfrac, msubsup, munderover,munder, mover, mmultiscripts, msup, msub, mtext,mprescripts, mtable, mtr, mtd, mth
+merge-divs: yes
+merge-spans: yes
+new-blocklevel-tags: header, nav, footer, template
+new-empty-tags:
+new-inline-tags:
 numeric-entities: yes
+output-html: no
 output-xml: no
+output-xhtml: yes
 quiet: yes
 quote-marks: yes
 quote-nbsp: yes
 show-warnings: no
+show-body-only: yes
+sort-attributes: alpha
 tab-size: 2
 tidy-mark: no
 uppercase-attributes: no
 uppercase-tags: no
-wrap: 72
+vertical-space: no
+wrap: 0
+wrap-attributes: no
 wrap-php: no
-join-classes: yes
-join-styles: yes
-
