--- a/files/tidy.conf
+++ b/files/tidy.conf
@@ -1,39 +1,76 @@
-alt-text:
-break-before-br: yes
-char-encoding: utf8
-clean: yes
-doctype: auto
-enclose-block-text: yes
-enclose-text: yes
-fix-uri: yes
-force-output: yes
-hide-comments: no
+indent: auto
 indent-spaces: 2
-indent: yes
-input-xml: no
-join-classes: yes
-join-styles: yes
-markup: yes
-merge-divs: yes
-merge-spans: yes
-new-blocklevel-tags: header, nav, footer, template
-new-empty-tags:
-new-inline-tags:
-numeric-entities: yes
-output-html: no
-output-xml: no
-output-xhtml: yes
 quiet: yes
-quote-marks: yes
-quote-nbsp: yes
-show-warnings: no
-show-body-only: yes
-sort-attributes: alpha
-tab-size: 2
 tidy-mark: no
-uppercase-attributes: no
-uppercase-tags: no
-vertical-space: no
+show-body-only: auto
 wrap: 0
-wrap-attributes: no
-wrap-php: no
+
+strict-tags-attributes: no
+drop-proprietary-attributes: no
+
+new-blocklevel-tags: template
+
+
+#markup: true
+#output-xml: false
+#input-xml: true
+#show-warnings: false
+#numeric-entities: false
+#quote-marks: false
+#quote-nbsp: true
+#quote-ampersand: false
+#break-before-br: false
+#preserve-entities: true
+#uppercase-tags: false
+#uppercase-attributes: false
+#indent: auto
+#indent-spaces: 2
+#indent-attributes: false
+#sort-attributes: alpha
+#wrap: 0
+
+
+
+#markup: true
+#force-output: yes
+#join-classes: yes
+#join-styles: yes
+#new-inline-tags: { }
+
+# alt-text:
+# break-before-br: yes
+# char-encoding: utf8
+# clean: yes
+# doctype: auto
+# enclose-block-text: yes
+# enclose-text: yes
+# fix-uri: yes
+# force-output: yes
+# hide-comments: no
+# indent-spaces: 2
+# indent: yes
+# input-xml: no
+# markup: yes
+# merge-divs: yes
+# merge-spans: yes
+# new-blocklevel-tags: header, nav, footer, template
+# new-empty-tags:
+# new-inline-tags:
+# numeric-entities: yes
+# output-html: no
+# output-xml: no
+# output-xhtml: yes
+# quiet: yes
+# quote-marks: yes
+# quote-nbsp: yes
+# show-warnings: no
+# show-body-only: yes
+# sort-attributes: alpha
+# tab-size: 2
+# tidy-mark: no
+# uppercase-attributes: no
+# uppercase-tags: no
+# vertical-space: no
+# wrap: 0
+# wrap-attributes: no
+# wrap-php: no
